Use JavaModuleOptions.