@@ -33,6 +33,7 @@ import org.apache.spark.{SparkConf, TestUtils}
 import org.apache.spark.deploy.SparkSubmitTestUtils
 import org.apache.spark.internal.config.MASTER_REST_SERVER_ENABLED
 import org.apache.spark.internal.config.UI.UI_ENABLED
+import org.apache.spark.launcher.JavaModuleOptions
 import org.apache.spark.sql.{QueryTest, Row, SparkSession}
 import org.apache.spark.sql.catalyst.TableIdentifier
 import org.apache.spark.sql.catalyst.catalog.CatalogTableType
@@ -220,9 +221,7 @@ class HiveExternalCatalogVersionsSuite extends SparkSubmitTestUtils {
         "--conf", s"spark.sql.test.version.index=$index",
         "--driver-java-options", s"-Dderby.system.home=${wareHousePath.getCanonicalPath} " +
           // TODO: Consider to remove the following JVM options once the Spark 3.2 line is EOL.
-          "-XX:+IgnoreUnrecognizedVMOptions " +
-          "--add-opens=java.base/sun.nio.ch=ALL-UNNAMED " +
-          "--add-opens=java.base/java.net=ALL-UNNAMED",
+          String.join(" ", JavaModuleOptions.defaultModuleOptions()),
         tempPyFile.getCanonicalPath)
       runSparkSubmit(args, Some(sparkHome.getCanonicalPath), isSparkTesting = false)
     }
